Fix jsdialog spinfield jumping on hover
Visible when using the following core change:
https://gerrit.libreoffice.org/c/core/+/142974

Note: no need to have generic CSS rules for spinfields
only for the sidebar

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -24,8 +24,6 @@
 
 .sidebar .spinfieldcontainer input {
 	width: 121px;
-	border: 1px solid var(--color-border-dark);
-	border-radius: var(--border-radius);
 	height: 28px;
 	padding-inline-start: 4px;
 	position: relative;
